--- a/accounts/templates/registration/login.html
+++ b/accounts/templates/registration/login.html
@@ -1,24 +1,40 @@
-<h1>Login</h1>
+<!DOCTYPE html>
+<html>
+<head>
+    <title>Login</title>
+    <style>
+        .error { color: red; margin-top: 5px; }
+        .success { color: green; }
+        .errorlist { color: red; list-style: none; padding: 0; }
+        .errorlist li { margin: 5px 0; }
+    </style>
+</head>
+<body>
+    <h1>Login</h1>
 
-{% if messages %}
-    <ul class="messages">
-    {% for message in messages %}
-        <li class="{{ message.tags }}">{{ message }}</li>
-    {% endfor %}
-    </ul>
-{% endif %}
+    {% if messages %}
+        <div class="messages">
+        {% for message in messages %}
+            <div class="message {{ message.tags }}">
+                <strong>{{ message }}</strong>
+            </div>
+        {% endfor %}
+        </div>
+    {% endif %}
 
-<form method="post">
-    {% csrf_token %}
-    <div>
-        <label for="username">Username:</label>
-        <input type="text" name="username" required>
-    </div>
-    <div>
-        <label for="password">Password:</label>
-        <input type="password" name="password" required>
-    </div>
-    <button type="submit">Login</button>
-</form>
+    <form method="post">
+        {% csrf_token %}
+        <div>
+            <label for="username">Username:</label>
+            <input type="text" name="username" required autofocus>
+        </div>
+        <div>
+            <label for="password">Password:</label>
+            <input type="password" name="password" required>
+        </div>
+        <button type="submit">Login</button>
+    </form>
 
-<p>Don't have an account? <a href="{% url 'register' %}">Register here</a></p>
+    <p>Don't have an account? <a href="{% url 'register' %}">Register here</a></p>
+</body>
+</html>
