change register to patient_rergister

--- a/accounts/templates/registration/forgot_password.html
+++ b/accounts/templates/registration/forgot_password.html
@@ -69,7 +69,7 @@
 
         <div class="links">
             <a href="{% url 'login' %}">Back to Login</a> | 
-            <a href="{% url 'register' %}">Create Account</a>
+            <a href="{% url 'patient_register' %}">Create Account</a>
         </div>
     </div>
 </body>
