--- a/accounts/templates/registration/login.html
+++ b/accounts/templates/registration/login.html
@@ -57,7 +57,7 @@
         </div>
         <button type="submit">Login</button>
     </form>
-    <p>Don't have an account? <a href="{% url 'register' %}">Register here</a></p>
+    <p>Don't have an account? <a href="{% url 'patient_register' %}">Register here</a></p>
     <p>Forgot your password? <a href="{% url 'forgot_password' %}">Reset it here</a></p>
 </body>
 </html>
