--- a/accounts/templates/registration/profile.html
+++ b/accounts/templates/registration/profile.html
@@ -53,5 +53,6 @@
 
     <hr />
     <a href="{% url 'logout' %}">Logout</a>
+    <a href="{% url 'edit_profile' %}">Edit Profile</a>
   </body>
 </html>
