doctor can edit profile

--- a/accounts/templates/registration/profile.html
+++ b/accounts/templates/registration/profile.html
@@ -49,6 +49,7 @@
         <p><strong>Phone Number:</strong> {{ user.phone_number }}</p>
         <p><strong>Bio:</strong> {{ profile.bio }}</p>
         <p><strong>Session Duration:</strong> {{ profile.session_duration }}</p>
+        <p><strong>Session Price:</strong> {{ profile.session_price }}</p>
     {% endif %}
 
     <hr />
